--- a/welcome.html
+++ b/welcome.html
@@ -5,23 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WELCOME</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="container">
-        <h1>WELCOME TO KINGS BIRTHDAY SPIN TO WIN GAME</h1>
+        <div>
+            <h1>WELCOME TO KINGS BIRTHDAY SPIN TO WIN GAME</h1>
 
-        <form class="form">
-            <div class="title">KINGS CUISINE<br><span>sign up to play</span></div>
-            <input class="input inputName" name="name" placeholder="Name" type="text">
-            <input class="input inputNo" name="no" placeholder="Whatsapp no" type="tel">
+            <form class="form" action="game.html">
+                <div class="title">KINGS CUISINE<br><span>sign up to play</span></div>
+                <input class="input inputName" name="name" placeholder="Name" type="text">
+                <input class="input inputNo" name="no" placeholder="Whatsapp no" type="tel">
 
-            <button class="button-confirm" onclick="saveToJson()">Let`s go → <a href="chdiex.html"></a></button>
-        </form>
+                <button class="button-confirm">Let`s go → </button>
+            </form>
+        </div>
     </div>
-    <button><a href="game.html"></a>knljlj</button>
-    <script src="script.js"></script>
 </body>
 
 </html>
