changed the backgroung

--- a/game.html
+++ b/game.html
@@ -29,17 +29,15 @@
                 </button>
             </div>
         </div>
-        <div id="result_container">
-            <div class="container_youwon">
-                <div class="card">
-                    <h2 id="result"></h2>
-                </div>
-                <div>
-                    <h3 style="color:white;
-                                top: 10rem; position: relative;">Screenshot and send to kings dm</h3>
-                </div>
+    </div>
+    <div id="result_container">
+        <div class="container_youwon">
+            <div class="card">
+                <h2 id="result"></h2>
             </div>
-
+            <div>
+                <h3 style="color:white; top: 10rem; position: relative;">Screenshot and send to kings dm</h3>
+            </div>
         </div>
 
     </div>
