--- a/welcome.html
+++ b/welcome.html
@@ -9,17 +9,19 @@
 </head>
 
 <body>
-    <div class="container">
-        <div>
-            <h1>WELCOME TO KINGS BIRTHDAY SPIN TO WIN GAME</h1>
+    <div class="body">
+        <div class="container">
+            <div>
+                <h1>WELCOME TO KINGS BIRTHDAY SPIN TO WIN GAME</h1>
 
-            <form class="form" action="game.html">
-                <div class="title">KINGS CUISINE<br><span>sign up to play</span></div>
-                <input class="input inputName" name="name" placeholder="Name" type="text">
-                <input class="input inputNo" name="no" placeholder="Whatsapp no" type="tel">
+                <form class="form" action="game.html">
+                    <div class="title">KINGS CUISINE<br><span>sign up to play</span></div>
+                    <input class="input inputName" name="name" placeholder="Name" type="text">
+                    <input class="input inputNo" name="no" placeholder="Whatsapp no" type="tel">
 
-                <button class="button-confirm">Let`s go → </button>
-            </form>
+                    <button class="button-confirm">Let`s go → </button>
+                </form>
+            </div>
         </div>
     </div>
 </body>
